# finlab

./: pyproject.toml
.guardrails/: hub_registry.json
api/: main.py
api/config/: company_mappings.py  prompts.py  settings.py
api/models/: agent.py  rag.py  search.py
api/routers/: agent.py  rag.py  search.py
api/services/: agent.py  rag.py  search.py  ticker_extractor.py
evaluations/: level-1-unit-tests.py  level-2-integration-tests.py  level-3-human-annotation.py
evaluations/test_cases/: apple_test.json  ibm_test.json  natural_language_test.json  no_company_test.json
guardrails/: guardrails-demo-1.py  guardrails-demo-2.py  guardrails-demo-3.py
ingestion/: create-collection.py  create_indexes.py  ingestion.py  news_ingestion.py  test-query.py
ingestion/utils/: news_client.py  semantic_chunker.py  simple_chunker.py
