[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "groq>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "uvicorn>=0.41.0",
]
