[project]
name = "finlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edgartools>=5.23.2",
    "fastapi>=0.129.0",
    "groq>=1.0.0",
    "guardrails-ai>=0.9.3",
    "hdbscan>=0.8.41",
    "instructor>=1.14.5",
    "ipykernel>=7.2.0",
    "langfuse>=4.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "sentence-transformers>=5.3.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
